crates/snapshot-tests/tests/snapshots/parser__bad_floats__trailing_exp2.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidFloat]: invalid float: expected digit after decimal point at `a`
  ┌─ trailing_exp2:1:5
  │
1 │ a = 0.E
  │     ^^^ invalid float: expected digit after decimal point


error: invalid float: expected digit after decimal point at `a`
 --> trailing_exp2:1:5
  |
1 | a = 0.E
  |     ^^^ invalid float: expected digit after decimal point
Error {
    kind: "InvalidFloat",
    message: "invalid float: expected digit after decimal point",
    span: 4..7,
    path: Some(
        "a",
    ),
}
