crates/snapshot-tests/tests/snapshots/parser__bad_floats__underscore_after_exp.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidFloat]: invalid float: underscores must be between two digits at `a`
  ┌─ underscore_after_exp:1:5
  │
1 │ a = 73e_3
  │     ^^^^^ invalid float: underscores must be between two digits
